--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@ body {
 	overflow: hidden;
 }
 
+ul {
+	margin: 0;
+	padding: 0;
+}
+
 header {
 	background: #35424a;
 	color: #fff;
@@ -26,4 +31,33 @@ header a {
 	text-decoration: none;
 	text-transform: uppercase;
 	font-size: 16px;
+}
+
+header li {
+	float: left;
+	display: inline;
+	padding: 0 20px 0 20px;
+}
+
+header #branding {
+	float: left;
+}
+
+header #branding h1 {
+	margin: 0;
+}
+
+header nav {
+	float: right;
+	margin-top: 10px;
+}
+
+header .highlight,
+header .current a {
+	color: #e8491d;
+	font-weight: bold;
+}
+
+header a:hover {
+	color: #ccc;
 }
