--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ ul {
 	padding: 0;
 }
 
+/* button */	
 .button-1 {
 	height: 38px;
 	background: #e8491d;
@@ -28,7 +29,7 @@ ul {
 	color: #fff;
 }
 
-/* ------------------- */
+/* header */	
 header {
 	background: #35424a;
 	color: #fff;
